# rustapi

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  openapi.yaml
.github/: dependabot.yml
.github/workflows/: test.yml
config/: default.json  test.json
src/: logger.rs
src/routes/: cat.rs
src/tests/: setup.rs  utils.rs
src/utils/: authenticate_request.rs  custom_response.rs  pagination.rs
