[package]
name = "rustapi"
version = "0.1.0"
authors = ["ndelvalle <nicolas.delvalle@gmail.com>"]
edition = "2021"

[dependencies]
config = "0.15.19"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
# Wait for wither to relase a new version.
# https://github.com/thedodd/wither/pull/89#issuecomment-1023644443
wither = { git = "https://github.com/thedodd/wither", rev = "52fd503" }
futures = { version = "0.3.32" }
thiserror = "2.0.18"
axum = { version = "0.8.8" }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tower-http = { version = "0.6", features = [
    "trace",
    "compression-br",
    "propagate-header",
    "sensitive-headers",
    "cors",
] }
chrono = "0.4.43"
async-trait = "0.1.89"
# Investigate if wither::bson can be used instead and activate this feature.
bson = { version = "2.15.0", features = ["serde_with", "chrono-0_4"] }
mongodb = { version = "3.5.1", features = ["compat-3-0-0"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
once_cell = "1.21.3"
bcrypt = "0.18.0"
validator = { version = "0.20.0", features = ["derive"] }
mime = "0.3.17"
bytes = "1.11.1"
axum-extra = { version = "0.12.5", features = ["typed-header"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
reqwest = { version = "0.13.2", features = ["json"] }
pretty_assertions = "1.4.1"
